--- a/HelloMusic.html
+++ b/HelloMusic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <title>I LOVE MUSIC</title>
@@ -9,45 +9,68 @@
 </head>
 <body>
 
-<div class="container-fluid p-5 bg-primary text-white text-center">
+<div class="header">
   <h1>HELLO MUSIC</h1>
   <p>แหล่งรวมเพลงหลากหลายสัญชาติ</p> 
-  <p>Thailand Englist Korea Chinese</p>
+  <p>Thailand | English | Korea | Chinese</p>
 </div>
-  
+
+<div class="container mt-4">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-md-3 text-center">
         <h3>THAI MUSIC</h3>
         <p>รวมเพลงไทยยอดฮิต ติดกระแสปี 2024</p>
         <a href="https://open.spotify.com/playlist/37i9dQZF1DX8peoGqrSg0H" target="_blank" rel="noopener noreferrer">
-            <img src="Imgaes/Thai Music.jpg" alt="กดที่รูปภาพ" width="300" height="200">
+            <img src="Imgaes/Thai Music.jpg" alt="กดที่รูปภาพ" class="img-fluid rounded">
         </a>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-md-3 text-center">
         <h3>ENGLISH MUSIC</h3>
         <p>รวมเพลงสากลยอดฮิต เอาใจวัยรุ่นสมัยใหม่</p>
         <a href="https://open.spotify.com/playlist/3YmVSWCvANCQ7HO9y4nNIh" target="_blank" rel="noopener noreferrer">
-            <img src="Imgaes/English music.jpg" alt="กดที่รูปภาพ" width="300" height="200">
+            <img src="Imgaes/English music.jpg" alt="กดที่รูปภาพ" class="img-fluid rounded">
         </a>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-md-3 text-center">
         <h3>KOREA MUSIC</h3>
         <p>เพลง K-POP สุดฮิต ติ่งเกาหลีห้ามพลาด</p>
         <a href="https://open.spotify.com/playlist/37i9dQZF1DX9tPFwDMOaN1" target="_blank" rel="noopener noreferrer">
-            <img src="Imgaes/Korea music.jpg" alt="กดที่รูปภาพ" width="300" height="200">
+            <img src="Imgaes/Korea music.jpg" alt="กดที่รูปภาพ" class="img-fluid rounded">
         </a>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-md-3 text-center">
         <h3>CHINESE MUSIC</h3>
         <p>สาวกจีนฟังทางนี้ เพลงจีนสุดฮิตห้ามพลาด</p>
         <a href="https://open.spotify.com/playlist/3cbnvZVEKSRxQKCaP1nin9" target="_blank" rel="noopener noreferrer">
-            <img src="Imgaes/Chinese music.jpg" alt="กดที่รูปภาพ" width="300" height="200">
+            <img src="Imgaes/Chinese music.jpg" alt="กดที่รูปภาพ" class="img-fluid rounded">
         </a>
-    </div>
-</div>
+    
+          }
+        </style>
+      </head>
+      <body>
+
+        <style>
+            body {
+              background-image: url('Imgaes/background.jpg'); 
+              background-size: cover;
+              background-position: center;
+              background-attachment: fixed;
+            }
+            .header {
+            background-image: url('Imgaes/white background.jpg');
+            background-size: cover;
+            background-position: center;
+            padding: 50px;
+            color: black;
+            text-align: center;
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
+            font-size: 2rem;
+            font-weight: bold;
+        }
     </div>
   </div>
 </div>
